refactor(security):重构管理员权限验证逻辑并优化角色解析
- 移除 IsAdmin 注解的 super_admin 兜底逻辑- 修改 PermissionAuth 和 SecurityUtils 中的管理员判断逻辑，统一使用 ADMIN 角色- 优化 UserServiceImpl 和 Client UserServiceImpl 中的角色提取方法- 改进 SecurityConstants 和 SysUserDetails 中的角色前缀处理- 移除 AdminExampleController 示例控制器
- 调整 AuthController 权限注解使用方式- 新增 Redis 缓存配置支持商城商品详情缓存
- 完善 MallProductServiceImpl 的缓存清除逻辑
-优化 MallProductController 的请求路径映射