@@ -5,9 +5,13 @@ import cn.zhangchuangla.medicine.client.service.UserService;
 import cn.zhangchuangla.medicine.model.entity.User;
 import com.baomidou.mybatisplus.extension.conditions.query.LambdaQueryChainWrapper;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 /**
  * @author Chuang
@@ -49,10 +53,7 @@ public class UserServiceImpl extends ServiceImpl<UserMapper, User>
     public Set<String> getUserRolesByUserId(Long userId) {
         LambdaQueryChainWrapper<User> eq = lambdaQuery().eq(User::getId, userId);
         User user = eq.one();
-        if (user != null && user.getRoles() != null) {
-            return Set.of(user.getRoles().split(","));
-        }
-        return Set.of();
+        return extractRoles(user);
     }
 
     /**
@@ -65,10 +66,25 @@ public class UserServiceImpl extends ServiceImpl<UserMapper, User>
     public Set<String> getUserRolesByUserName(String username) {
         LambdaQueryChainWrapper<User> eq = lambdaQuery().eq(User::getUsername, username);
         User user = eq.one();
-        if (user != null && user.getRoles() != null) {
-            return Set.of(user.getRoles().split(","));
+        return extractRoles(user);
+    }
+
+    private Set<String> extractRoles(User user) {
+        if (user == null || StringUtils.isBlank(user.getRoles())) {
+            return Collections.emptySet();
         }
-        return Set.of();
+        String rawRoles = user.getRoles().trim();
+        if (rawRoles.startsWith("[") && rawRoles.endsWith("]")) {
+            rawRoles = rawRoles.substring(1, rawRoles.length() - 1);
+        }
+        if (StringUtils.isBlank(rawRoles)) {
+            return Collections.emptySet();
+        }
+        return Arrays.stream(rawRoles.split(","))
+                .map(String::trim)
+                .map(role -> StringUtils.remove(role, '"'))
+                .filter(StringUtils::isNotBlank)
+                .collect(Collectors.toSet());
     }
 }
 
